--- a/tools/block-documentation/index.html
+++ b/tools/block-documentation/index.html
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 
-		<h2 id="references">References</h2>
+		<h2 id="references">Object references</h2>
 		<div class="blocks" data-bind="foreach: references">
 			<div class="panel panel-default" data-bind="attr: {'id': $data.name}">
 				<div class="panel-heading">
@@ -102,6 +102,36 @@
 				</div>
 			</div>
 		</div>
+
+		<h2 id="enums">Enum references</h2>
+		<div class="blocks" data-bind="foreach: enums">
+			<div class="panel panel-default" data-bind="attr: {'id': $data.name}">
+				<div class="panel-heading">
+					<h3 class="panel-title" data-bind="html: $data.name"></h3>
+				</div>
+				<div class="panel-body table-responsive">
+					<table class="table table-striped">
+						<thead>
+						<tr data-bind="foreach: Object.keys($data.properties[0])">
+							<th data-bind="html: $data"></th>
+						</tr>
+						</thead>
+						<tbody data-bind="foreach: $data.properties">
+						<tr data-bind="foreach: Object.keys($data)">
+							<td>
+								<!-- ko if: $data === 'value' -->
+								<code data-bind="html: $parent[$data]"></code>
+								<!-- /ko -->
+								<!-- ko if: $data !== 'value'-->
+								<span data-bind="html: $parent[$data]"></span>
+								<!-- /ko -->
+							</td>
+						</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </div><!-- /.container -->
@@ -115,7 +145,8 @@
 		var ViewModel = function( data )
 		{
 			this.blocks = ko.observableArray( data.blocks );
-			this.references = ko.observable( data.references );
+			this.references = ko.observableArray( data.references );
+			this.enums = ko.observableArray( data.enums );
 		};
 
 		// Create the request
