Add support for nested objects

--- a/tools/block-documentation/index.html
+++ b/tools/block-documentation/index.html
@@ -139,7 +139,7 @@
 
 </div><!-- /.container -->
 <script>
-	var types = ['string', 'boolean', 'Array', 'number'];
+	var types = ['string', 'boolean', 'Array', 'Object', 'number'];
 
 	// Check fetch support
 	if( self.fetch )
