--- a/tools/block-documentation/index.html
+++ b/tools/block-documentation/index.html
@@ -12,7 +12,7 @@
 
 	<style>
 		body {
-			padding-top: 90px;
+			padding-top: 10px;
 		}
 
 		td .table {
@@ -20,73 +20,82 @@
 			width: calc(100% - 50px);
 			margin-bottom: 0;
 		}
+
+		.list-group {
+			text-transform: capitalize;
+		}
 	</style>
 </head>
 <body>
-<nav class="navbar navbar-inverse navbar-fixed-top">
-	<div class="container">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="#">Block documentation</a>
-		</div>
-		<div id="navbar" class="collapse navbar-collapse">
-			<ul class="nav navbar-nav" data-bind="foreach: Object.keys($data)">
-				<li>
-					<a data-bind="html: $data, attr: {'href': '#'  + $data}"></a>
-				</li>
-			</ul>
+
+<div class="container-fluid viewmodel">
+	<div class="col-md-3">
+		<h2>Documentation</h2>
+		<!-- ko foreach: Object.keys($data) -->
+			<div class="list-group">
+				<span class="list-group-item">
+					<span class="badge" data-bind="text: $parent[$data]().length"></span>
+					<span class="list-group-item-heading">
+					    <h4 class="list-group-item-heading" data-bind="html: $data"></h4>
+					</span>
+				</span>
+				<!-- ko foreach: $parent[$data] -->
+					<a href="#" class="list-group-item" data-bind="attr: {href: '#' + ($data.blockId || $data.name)}, html: $data.blockId || $data.name"></a>
+				<!-- /ko -->
+			</div>
+		<!-- /ko -->
+	</div>
+
+	<div class="col-md-9">
+		<div class="starter-template">
+			<h2 id="blocks">Blocks</h2>
+			<div class="blocks" data-bind="foreach: blocks">
+				<div class="panel panel-default" data-bind="attr: {'id': $data.blockId}">
+					<div class="panel-heading">
+						<h3 class="panel-title" data-bind="html: $data.blockId"></h3>
+					</div>
+					<div class="panel-body table-responsive">
+						<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
+					</div>
+					<div class="panel-body panel-responsive">
+						<h5>Example JSON</h5>
+						<pre><code class="json-example" data-bind="html: $data.example"></code></pre>
+					</div>
+				</div>
+			</div>
+
+			<h2 id="references">References</h2>
+			<div class="blocks" data-bind="foreach: references">
+				<div class="panel panel-default" data-bind="attr: {'id': $data.name}">
+					<div class="panel-heading">
+						<h3 class="panel-title" data-bind="html: $data.name"></h3>
+					</div>
+					<div class="panel-body table-responsive">
+						<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
+					</div>
+				</div>
+			</div>
+
+			<h2 id="enums">Enums</h2>
+			<div class="blocks" data-bind="foreach: enums">
+				<div class="panel panel-default" data-bind="attr: {'id': $data.name}">
+					<div class="panel-heading">
+						<h3 class="panel-title" data-bind="html: $data.name"></h3>
+					</div>
+					<div class="panel-body table-responsive">
+						<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-</nav>
 
-<div class="container viewmodel">
-
-	<div class="starter-template">
-		<h2 id="blocks">Application blocks</h2>
-		<div class="blocks" data-bind="foreach: blocks">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-bind="html: $data.blockId"></h3>
-				</div>
-				<div class="panel-body table-responsive">
-					<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
-				</div>
-				<div class="panel-body panel-responsive">
-					<h5>Example JSON</h5>
-					<pre><code class="json-example" data-bind="html: $data.example"></code></pre>
-				</div>
-			</div>
-		</div>
-
-		<h2 id="references">Object references</h2>
-		<div class="blocks" data-bind="foreach: references">
-			<div class="panel panel-default" data-bind="attr: {'id': $data.name}">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-bind="html: $data.name"></h3>
-				</div>
-				<div class="panel-body table-responsive">
-					<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
-				</div>
-			</div>
-		</div>
-
-		<h2 id="enums">Enum references</h2>
-		<div class="blocks" data-bind="foreach: enums">
-			<div class="panel panel-default" data-bind="attr: {'id': $data.name}">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-bind="html: $data.name"></h3>
-				</div>
-				<div class="panel-body table-responsive">
-					<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
-				</div>
-			</div>
-		</div>
-	</div>
 
 	<script type="text/html" id="table">
 		<table class="table">
 			<thead>
 				<tr data-bind="foreach: Object.keys($data[0])">
-					<!-- ko if: $data !== 'properties' -->
+					<!-- ko if: skippedProperties.indexOf($data) == -1 -->
 						<th data-bind="html: $data"></th>
 					<!-- /ko -->
 				</tr>
@@ -95,11 +104,15 @@
 
 				<tr data-bind="foreach: Object.keys($data)">
 
-					<!-- ko if: $data !== 'properties' -->
+					<!-- ko if: skippedProperties.indexOf($data) == -1 -->
 
 						<td>
 							<!-- ko if: $data === 'value' -->
 								<code data-bind="html: $parent[$data]"></code>
+							<!-- /ko -->
+
+							<!-- ko if: $data === 'defaultValue' -->
+								<var data-bind="html: $parent[$data]"></var>
 							<!-- /ko -->
 
 							<!-- ko if: $data === 'type' -->
@@ -118,7 +131,7 @@
 								<span class="btn btn-default btn-sm disabled" data-bind="text: $parent[$data], css: {'btn-danger':  $parent[$data]}"></span>
 							<!-- /ko -->
 
-							<!-- ko if: $data !== 'value' && $data !== 'type' && $data !== 'required' -->
+							<!-- ko if: $data !== 'value' && $data !== 'type' && $data !== 'required' && $data !== 'defaultValue' -->
 								<span data-bind="html: $parent[$data]"></span>
 							<!-- /ko -->
 						</td>
@@ -127,7 +140,7 @@
 
 				<!-- ko if: $data.properties && $data.properties.length -->
 					<tr>
-						<td colspan="4">
+						<td colspan="4" data-bind="attr: {colspan: Object.keys($data).length - skippedProperties.length}">
 							<!-- ko template: {name: 'table', data: $data.properties} --><!--/ko -->
 						</td>
 					</tr>
@@ -140,6 +153,7 @@
 </div><!-- /.container -->
 <script>
 	var types = ['string', 'boolean', 'Array', 'Object', 'number'];
+	var skippedProperties = ['placeholder', 'properties'];
 
 	// Check fetch support
 	if( self.fetch )
