--- a/tools/block-documentation/index.html
+++ b/tools/block-documentation/index.html
@@ -154,7 +154,7 @@
 
 </div><!-- /.container -->
 <script>
-	var types = ['string', 'boolean', 'array', 'object', 'number'];
+	var types = ['string', 'boolean', 'Array', 'Object', 'number'];
 	var skippedProperties = ['placeholder', 'properties'];
 
 	// Check fetch support
